--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   "author": "Sourav G.",
   "license": "ISC",
   "dependencies": {
-    "@types/node": "^20.1.0",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.0.4"
+    "@types/node": "20.1.0",
+    "ts-node": "10.9.1",
+    "typescript": "5.0.4"
   }
 }
